--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     compile "org.grails.plugins:spring-security-rest:${springSecurityRestVersion}"
     compile "org.grails.plugins:spring-security-rest-gorm:${springSecurityRestVersion}"
     compile 'org.grails.plugins:aws-sdk:1.10.74'
+    compile 'org.postgresql:postgresql:9.4.1211.jre7'
     compile('com.amazonaws:aws-java-sdk-s3:1.11.136') {
         exclude group: 'com.fasterxml.jackson.core'
     }
